# RM2026

./: .clang-format  .clangd  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  DEBUG_MOTOR_ISSUE.md  README.md  compile_commands.json  platformio.ini
.github/workflows/: c-cpp.yml
Src/: CMakeLists.txt
Src/application/: robot_def.h
Src/application/cmd/: robot_cmd.c
cmake/: Functions.cmake  TestFunctions.cmake  Toolchain.cmake
code/pio-standard-robot/: platformio.ini
code/pio-standard-robot/original/MDK-ARM/: standard_robot.uvguix.29395  standard_robot.uvoptx  standard_robot.uvprojx
code/pio-standard-robot/original/MDK-ARM/RTE/_standard_robot/: RTE_Components.h
config/linker/: README.md
config/openocd/: README.md  openocd_dap.cfg  openocd_dap_1.cfg  openocd_jlink.cfg
docs/: 6020.md  COMMENT_GUIDE.md  README_CMake.md  README_CMakeLists.md  dt7_dr16_protocol.md  robot_def耦合问题.md  todolist.md
docs/bsp/: BSP_DEMO_SUMMARY.md  BSP_LED_封装方案文档.md  BSP_REFACTORING_SUMMARY.md
docs/can/: CAN_RECOVERY_AND_STARTUP.md  can_comm-v1.md  can_comm-v2.md
docs/doc/C_board/: pin_map.h
docs/doc/动力组件/C620电调-M3508电机/: C620电调-M3508电机简介.md
docs/envs/: cmsis_dap_connection_issue_analysis.md  cmsis_dap_usage_guide.md  外部时钟频率设置问题.md
docs/led/: LED_RGB_使用说明.md
docs/motor/: gm6020_can_interrupt_issue.md  m3508_advanced_usage.md  m3508_control_summary.md  m3508_direct_control_api.md
docs/other/: button_implementation_summary.md  multi_button_interrupt_implementation_summary.md
docs/protocol/: QUICK_START.md  SERIAL_PORT_TECHNICAL.md  SERIAL_PORT_USAGE.md  UART_CLOCK_DEBUGGING.md  UART_DEBUG_GUIDE.md  USB_PORT_IMPLEMENTATION.md  USB_PORT_USAGE.md  USB_QUICK_REFERENCE.md
docs/usb/: USB_LED_DEMO_README.md  USB通讯实现原理文档.md
docs/动力组件/C620电调-M3508电机/: ID设置.md
examples/: M3508_advanced_demo.cpp  M3508demo.cpp  buzzer_test.cpp  gm6020demo.cpp  main.c  usb_demo.cpp
examples/bsp/: led.c
hal/: CMakeLists.txt  dma.c
include/: main.h  tim.h  usbd_cdc_if.h
lib/: CMakeLists.txt
lib/HNUYueLuRM/: CMakeLists.txt
lib/HNUYueLuRM/bsp/log/: bsp_log.h
lib/HNUYueLuRM/common/: robot_types.h
lib/HNUYueLuRM/docs/: PROJECT_ANALYSIS.md
lib/HNUYueLuRM/modules/master_machine/: master_process.c  master_process.h
lib/HNUYueLuRM/modules/motor/DMmotor/: dm8009p.c  dm8009p.h  dmmotor.c
lib/HNUYueLuRM/modules/motor/servo_motor/: servo_motor.h
lib/HNUYueLuRM/modules/referee/: referee_task.c  referee_task.h  rm_referee.h
lib/bsp/: bsp_board.c  bsp_board.h  bsp_config.h  bsp_led.c  bsp_led.h  bsp_tim.c  bsp_tim.h  pin_map.h
script/: build.sh  debug.sh  gdb.sh  upload.ps1  upload.sh
scripts/: cmsis_dap_simple.py  cmsis_dap_upload.py  upload_dfu.sh
src/: CAN_receive.c  CAN_receive.h  can.c  can.h  can_comm.hpp  gm6020.hpp  gm6020_can_demo.cpp  gpio.c  m3508.hpp  main.c  main.cpp  stm32f4xx_it.c  usb_device.c  usb_led_main.c  usb_led_main.c.backup  usbd_cdc_if.c  usbd_conf.c
src/bsp/: led_c.c  led_c.h
src/common/: ringbuffer.hpp  stm32f4xx_it.c  struct_typedef.h
src/common/pid/: pid_controller.cpp  pid_controller.hpp
src/common/utils/: utils.c  utils.h
src/drivers/: button_manager.cpp  button_manager.hpp
src/drivers/btn/: button.cpp  button.hpp
src/drivers/buzzer/: buzzer.cpp  buzzer.hpp
src/drivers/imu/: imu.hpp  imu_wrapper.hpp
src/drivers/led/: led.cpp  led.hpp
src/drivers/motor/: gm6020.cpp  gm6020.hpp  m3508.cpp  m3508.hpp
src/drivers/protocol/: README.md  can_comm.cpp  can_comm.hpp  serial_port.cpp  serial_port.hpp  usb_port.cpp  usb_port.hpp
src/hal/: can.c  gpio.c  tim.c  tim.h  usart.c  usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
src/test/: M3508demo.cpp  buzzer_test.cpp  gm6020demo.cpp  test.cpp  void.cpp
src/test/btn/: button_demo.cpp  multi_button_interrupt_demo.cpp
src/test/led/: led_debug_analysis.cpp  pwm_channel_debug.cpp  simple_led_demo.cpp
src/test/motor/: M3508demo.cpp  README_M3508demo.md  gm6020demo.cpp
src/test/protocol/: serial_demo.cpp  simple_uart_test.cpp  uart6_blocking_test.cpp  uart6_hsi_test.cpp  uart6_simple_test.cpp  uart6_simple_test_fixed.cpp  usb_simple_demo.cpp
test/: CMakeLists.txt  error_handler_stub.c
test/motor_test/: CMakeLists.txt  main.c
test/remote_control_demo/: CMakeLists.txt  main.c
test/test_imu/: CMakeLists.txt  main.c  openocd_dap.cfg
