# =============================================================================
# @file lib/CMakeLists.txt
# @brief HNUYueLuRM 框架库入口
# @project RM2026
# @author YZ-Control/myself
# @version 1.0.0
# @date 2025-12-07
# @details 将 HNUYueLuRM 框架子目录添加到构建系统，生成分层静态库供主工程使用。
# =============================================================================

add_subdirectory(HNUYueLuRM)
